--- a/object-detection/assets/colab/dt_object_detection_training.ipynb
+++ b/object-detection/assets/colab/dt_object_detection_training.ipynb
@@ -94,13 +94,13 @@
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
-        "with directory(\"/content/drive/My Drive/duckietown_dataset\"):\n",
+        "with directory(\"/content/drive/My Drive/duckietown_object_detection_dataset\"):\n",
         "  print(os.getcwd())\n",
         "  print(os.listdir())\n",
         "\n",
         "  with open(\"./test.txt\", \"w\") as f:  # please verify that you did get a new file in your Drive\n",
         "    f.write(\"Hello, world!\")\n",
-        "os.chdir('/content/drive/My Drive/duckietown_dataset')\n"
+        "os.chdir('/content/drive/My Drive/duckietown_object_detection_dataset')\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -109,7 +109,7 @@
           "name": "stdout",
           "text": [
             "Mounted at /content/drive\n",
-            "/content/drive/My Drive/duckietown_dataset\n",
+            "/content/drive/My Drive/duckietown_object_detection_dataset\n",
             "['labels', 'images', 'frames', 'annotation', 'val', 'train']\n"
           ]
         }
@@ -127,8 +127,8 @@
       "source": [
         "\n",
         "if not os.path.exists(\"SENTINEL\"):\n",
-        "  prun(\"mkdir duckietown_dataset\")\n",
-        "  prun(\"mv train duckietown_dataset && mv val duckietown_dataset\")"
+        "  prun(\"mkdir duckietown_object_detection_dataset\")\n",
+        "  prun(\"mv train duckietown_object_detection_dataset && mv val duckietown_object_detection_dataset\")"
       ],
       "execution_count": null,
       "outputs": [
@@ -136,7 +136,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "mkdir: cannot create directory ‘duckietown_dataset’: File exists\n",
+            "mkdir: cannot create directory ‘duckietown_object_detection_dataset’: File exists\n",
             "\n",
             "mv: cannot stat 'train': No such file or directory\n",
             "\n"
@@ -167,7 +167,7 @@
         "!cd yolov5 && pip3 install -r requirements.txt\n",
         "!pip3 install torch==1.11 torchvision==0.12.0\n",
         "if not os.path.exists(\"SENTINEL\"):\n",
-        "  run(\"mv duckietown_dataset yolov5\")\n",
+        "  run(\"mv duckietown_object_detection_dataset yolov5\")\n",
         "!touch SENTINEL"
       ],
       "execution_count": null,
@@ -395,13 +395,13 @@
             "\n",
             "Transferred 356/362 items from yolov5s.pt\n",
             "\n",
-            "WARNING: Dataset not found, nonexistent paths: ['/content/drive/MyDrive/duckietown_dataset/val']\n",
+            "WARNING: Dataset not found, nonexistent paths: ['/content/drive/MyDrive/duckietown_object_detection_dataset/val']\n",
             "Traceback (most recent call last):\n",
             "  File \"train.py\", line 544, in <module>\n",
             "    train(hyp, opt, device, tb_writer)\n",
             "  File \"train.py\", line 97, in train\n",
             "    check_dataset(data_dict)  # check\n",
-            "  File \"/content/drive/MyDrive/duckietown_dataset/yolov5/utils/general.py\", line 193, in check_dataset\n",
+            "  File \"/content/drive/MyDrive/duckietown_object_detection_dataset/yolov5/utils/general.py\", line 193, in check_dataset\n",
             "    raise Exception('Dataset not found.')\n",
             "Exception: Dataset not found.\n",
             "Latest exp is exp\n",
