--- a/object-detection/assets/colab/dt_mooc2022_object_detection_training.ipynb
+++ b/object-detection/assets/colab/dt_mooc2022_object_detection_training.ipynb
@@ -361,7 +361,7 @@
     "latest_exp = all_exps[latest_exp_index]\n",
     "# print(f\"Latest exp is {latest_exp}\")\n",
     "\n",
-    "# _ = prun(f\"cp yolov5/runs/train/{latest_exp}/weights/best.pt yolov5/best.pt\")\n",
+    "_ = prun(f\"cp yolov5/runs/train/{latest_exp}/weights/best.pt yolov5/best.pt\")\n",
     "print(f\"Marked the model from the latest run ({latest_exp}) as yolov5/best.pt.\")"
    ],
    "metadata": {
