--- a/object-detection/assets/colab/dt_object_detection_training.ipynb
+++ b/object-detection/assets/colab/dt_object_detection_training.ipynb
@@ -154,9 +154,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Change  working directory to the session workspace\n",
+        "# change  working directory to the session workspace\n",
         "os.chdir(SESSION_WORKSPACE)\n",
-        "print(f\"PWD: {os.getcwd()}\")"
+        "print(f\"PWD: {os.getcwd()}\")\n",
+        "\n",
+        "# install pytorch and torchvision (these versions must match those on the physical duckiebot)\n",
+        "!pip3 install torch==1.7.0 torchvision==0.8.1"
       ],
       "metadata": {
         "id": "xpWozMbUeFZA"
@@ -179,9 +182,9 @@
         "id": "P8L68QAeZF9G"
       },
       "source": [
-        "!git clone https://github.com/duckietown/yolov5.git -b dt-obj-det\n",
-        "!cd yolov5 && pip3 install -r requirements.txt\n",
-        "!pip3 install torch==1.11 torchvision==0.12.0"
+        "!rm -rf ./yolov5\n",
+        "!git clone https://github.com/ultralytics/yolov5.git -b v7.0\n",
+        "!cd yolov5 && pip3 install -r requirements.txt"
       ],
       "execution_count": null,
       "outputs": []
@@ -189,7 +192,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# We can now inform the training process of the format and location of our dataset"
+        "# We now inform the training process of the format and location of our dataset"
       ],
       "metadata": {
         "id": "g5iilV-e76YN"
@@ -233,8 +236,7 @@
         "id": "Kss7Oid6OkAv"
       },
       "source": [
-        "# !mv yolov5/best.pt yolov5/best_old.pt\n",
-        "!cd yolov5 && python3 train.py --img 416 --batch 16 --epochs 10 --data duckietown.yaml --weights yolov5s.pt"
+        "!cd yolov5 && python3 train.py --cfg ./models/yolov5n.yaml --img 416 --batch 32 --epochs 10 --data duckietown.yaml --weights yolov5n.pt"
       ],
       "execution_count": null,
       "outputs": []
@@ -249,9 +251,9 @@
         "all_exps_filtered = np.array(list(all_exps))\n",
         "latest_exp_index = np.argmax(all_exps)\n",
         "latest_exp = all_exps[latest_exp_index]\n",
-        "# print(f\"Latest exp is {latest_exp}\")\n",
+        "print(f\"Latest exp is {latest_exp}\")\n",
         "\n",
-        "_ = prun(f\"cp yolov5/runs/train/{latest_exp}/weights/best.pt yolov5/best.pt\")\n",
+        "prun(f\"cp yolov5/runs/train/{latest_exp}/weights/best.pt yolov5/best.pt\")\n",
         "print(f\"Marked the model from the latest run ({latest_exp}) as yolov5/best.pt.\")"
       ],
       "metadata": {
@@ -266,25 +268,16 @@
         "id": "gz2PZ7d0qPt0"
       },
       "source": [
-        "# Next, we can upload your model to Duckietown's cloud!"
+        "# Next, we can upload your model to Duckietown's cloud!\n",
+        "\n",
+        "We will need our token to access our personal cloud space."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4bNXEgAFpRIH"
-      },
-      "source": [
-        "!pip3 install git+https://github.com/duckietown/lib-dt-mooc@mooc2022"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# TODO: Fill in the duckietown token here\n",
-        "YOUR_DT_TOKEN = \"dt1-daZUHiuSz7CV52v4YS9wpXWsgnVtPyMP4sFd39x53WeZa-43dzqWFnWd8KBa1yev1g3UKnzVxZkkTbfiQFRKqBYf6sPsgu6ELuBXhtVPzwZJqnAm\""
+        "YOUR_DT_TOKEN = \"YOUR_TOKEN_HERE\""
       ],
       "metadata": {
         "id": "hl-HhnrFtKnp"
@@ -293,23 +286,60 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Then, we chose the location of the trained model on disk and its name once uploaded to our cloud space. You should not change these values, or the robots will not be able to find the model to download."
+      ],
+      "metadata": {
+        "id": "PCd7RrjLc64Z"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "P3HWb4wMpZc5"
+        "id": "4bNXEgAFpRIH"
       },
       "source": [
-        "from dt_mooc.cloud import Storage\n",
-        "from dt_mooc.utils import select_device\n",
         "import sys\n",
-        "import torch\n",
-        "\n",
         "sys.path.insert(0, './yolov5')\n",
-        "model = torch.load(\"./yolov5/best.pt\", map_location=select_device(\"cpu\"))['model'].float()  # load to FP32\n",
         "\n",
-        "storage = Storage(YOUR_DT_TOKEN)\n",
+        "# DO NOT CHANGE THESE\n",
+        "model_name = \"yolov5n\"\n",
+        "model_local_path = \"./yolov5/best.pt\"\n",
+        "model_remote_path = f\"courses/mooc/objdet/data/nn_models/{model_name}.pt\"\n",
         "\n",
-        "storage.upload_yolov5_only(\"yolov5\", model, \"./yolov5/best.pt\")"
+        "# install DCSS client\n",
+        "!pip3 install dt-data-api-daffy"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We now open a pointer to our cloud space and upload the model."
+      ],
+      "metadata": {
+        "id": "B8DYodvDdQKr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "from dt_data_api import DataClient, Storage\n",
+        "\n",
+        "# open a pointer to our personal duckietown cloud space\n",
+        "client = DataClient(YOUR_DT_TOKEN)\n",
+        "storage = client.storage(\"user\")\n",
+        "\n",
+        "# upload model\n",
+        "upload = storage.upload(model_local_path, model_remote_path)\n",
+        "upload.join()"
+      ],
+      "metadata": {
+        "id": "NAU4dTNJVkyx"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -323,15 +353,6 @@
         "\n",
         "We're done training! You can now close this tab and go back to the `Training` notebook"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "rNd8aBq9Zc2l"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
