Remove requirement to match DB installed versions

--- a/object-detection/assets/colab/dt_object_detection_training.ipynb
+++ b/object-detection/assets/colab/dt_object_detection_training.ipynb
@@ -158,7 +158,7 @@
         "os.chdir(SESSION_WORKSPACE)\n",
         "print(f\"PWD: {os.getcwd()}\")\n",
         "\n",
-        "# install pytorch and torchvision (these versions must match those on the physical duckiebot)\n",
+        "# install pytorch and torchvision\n",
         "!pip3 install torch==1.13.0 torchvision==0.14.0"
       ],
       "metadata": {
